# XAI

./: pyproject.toml
Classification-Case-Study/: classification_shap.ipynb
Classification_Case_Study/: classification_shap.ipynb
Deep-Learning-SHAP/ANN-torch/: ann_shap.ipynb
Deep-Learning-SHAP/CNN-tensorflow/: cnn_shap.ipynb
Regression-Case-Study/: regression_shap.ipynb
Regression_Case_Study/: regression_shap.ipynb
